# cli-game-engine

./: README.md  cli-game-engine.cabal
app/: Main.hs
example/: game.yml
src/I18n/: Applicative.hs  Literals.hs
src/Model/: Game.hs  Progress.hs  Stage.hs  Step.hs  Warn.hs
src/Platform/: GameStation.hs  Process.hs
src/UI/: IO.hs  IOConfig.hs  UI.hs
